Update stroke risk factors
Deleted unnecessary files and changed file names

--- a/stroke_risk_factors6_googc.ipynb
+++ b/stroke_risk_factors6_googc.ipynb
@@ -21,7 +21,8 @@
       "execution_count": 1,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "MLZEAoGjoY8M",
         "outputId": "0607420c-4ff2-45d7-d474-a7c76365048d"
@@ -161,7 +162,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "oHnjlBUCw4qL",
         "outputId": "08f5df6b-5649-46db-dae4-6ea45e8d08ec"
@@ -526,7 +528,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "xaTjdIv-xkT4",
         "outputId": "da076c42-0b3c-4007-aa14-eb43df310b4e"
@@ -910,7 +913,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "SQ-nnG09yazM",
         "outputId": "41822407-6502-47c6-efc1-2c4e9ace8d48"
@@ -2404,7 +2408,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "OrRDZprg6rvv",
         "outputId": "669ed81d-4ce6-4d46-e785-c36c3814e203"
@@ -2447,7 +2452,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "hhIZjSC18N0y",
         "outputId": "53224e5c-e755-485a-e409-5bb9c73353d0"
@@ -2499,7 +2505,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "rXOatfsE8voW",
         "outputId": "39a98cf0-eb6e-4de2-d6cb-725f0753e7c5"
@@ -2529,7 +2536,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "-jns91BUAh8i",
         "outputId": "4bdee7f6-93ee-42ac-d935-292f1d90fdfe"
@@ -2569,7 +2577,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "tQ3NdUkDAiDT",
         "outputId": "982a5e14-0d0e-426e-d99f-0c1cf5b6b296"
@@ -2620,7 +2629,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "coljHG2-ChPE",
         "outputId": "69cd9985-5e3b-4c42-b5c0-509e25992d6c"
